# vk_oauth2

./: Dockerfile  docker-compose.yml  prestart.sh  pyproject.toml
fastapi_application/: alembic.ini  main.py
fastapi_application/alembic/: env.py
fastapi_application/alembic/versions/: 2025_06_29_2020-7d00cdc70e6f_add_user_table.py  2025_07_01_2158-41bbb5992e6c_update_email_and_phone_tables_nullable_.py  2025_07_01_2203-4326d7e7e2d6_update_email_and_phone_tables_nullable_.py  2025_07_15_1830-24c81c834b7e_add_password_column_to_user_table.py
fastapi_application/api/: __init__.py
fastapi_application/core/: config.py
fastapi_application/core/models/: annotated.py  base.py  db_helper.py  models.py
fastapi_application/core/schemas/: token_data.py
fastapi_application/crud/: create_user.py  generate_secrets.py  oauth.py  vk_create_user.py
