[tool.poetry]
name = "oauth2"
version = "1.6.1"
description = "babube"
authors = ['Tema']

[tool.poetry.dependencies]
python = "^3.10.9"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = {extras = ["email"], version = "^2.7.1"}
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
exceptiongroup = "^1.2.0"
aiohttp = "^3.12.13"
asyncio = "^3.4.3"
jwt = "^1.4.0"
pyjwt = "^2.10.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.5.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

